objects/AI_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>AI_Suggestion_Type__c</fullName>
        <label>AI Suggestion Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case Classification</fullName>
                </value>
                <value>
                    <fullName>Priority Prediction</fullName>
                </value>
                <value>
                    <fullName>Suggested Reply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agent_Comments__c</fullName>
        <label>Agent Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>AI Feedbacks</relationshipLabel>
        <relationshipName>AI_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feedback_Status__c</fullName>
        <label>Feedback Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Helpful</fullName>
                </value>
                <value>
                    <fullName>Not Helpful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AI Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AF-{00000}</displayFormat>
        <label>AI Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>